--- a/static/swagger-ui/index.html
+++ b/static/swagger-ui/index.html
@@ -4,28 +4,28 @@
   <meta charset="UTF-8">
   <meta http-equiv="x-ua-compatible" content="IE=edge">
   <title>Swagger UI</title>
-  <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32" />
-  <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16" />
-  <link href='css/typography.css' media='screen' rel='stylesheet' type='text/css'/>
-  <link href='css/reset.css' media='screen' rel='stylesheet' type='text/css'/>
-  <link href='css/screen.css' media='screen' rel='stylesheet' type='text/css'/>
-  <link href='css/reset.css' media='print' rel='stylesheet' type='text/css'/>
-  <link href='css/print.css' media='print' rel='stylesheet' type='text/css'/>
+  <link rel="icon" type="image/png" href="static/swagger-ui/images/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="static/swagger-ui/images/favicon-16x16.png" sizes="16x16" />
+  <link href='static/swagger-ui/css/typography.css' media='screen' rel='stylesheet' type='text/css'/>
+  <link href='static/swagger-ui/css/reset.css' media='screen' rel='stylesheet' type='text/css'/>
+  <link href='static/swagger-ui/css/screen.css' media='screen' rel='stylesheet' type='text/css'/>
+  <link href='static/swagger-ui/css/reset.css' media='print' rel='stylesheet' type='text/css'/>
+  <link href='static/swagger-ui/css/print.css' media='print' rel='stylesheet' type='text/css'/>
 
-  <script src='lib/object-assign-pollyfill.js' type='text/javascript'></script>
-  <script src='lib/jquery-1.8.0.min.js' type='text/javascript'></script>
-  <script src='lib/jquery.slideto.min.js' type='text/javascript'></script>
-  <script src='lib/jquery.wiggle.min.js' type='text/javascript'></script>
-  <script src='lib/jquery.ba-bbq.min.js' type='text/javascript'></script>
-  <script src='lib/handlebars-4.0.5.js' type='text/javascript'></script>
-  <script src='lib/lodash.min.js' type='text/javascript'></script>
-  <script src='lib/backbone-min.js' type='text/javascript'></script>
-  <script src='swagger-ui.js' type='text/javascript'></script>
-  <script src='lib/highlight.9.1.0.pack.js' type='text/javascript'></script>
-  <script src='lib/highlight.9.1.0.pack_extended.js' type='text/javascript'></script>
-  <script src='lib/jsoneditor.min.js' type='text/javascript'></script>
-  <script src='lib/marked.js' type='text/javascript'></script>
-  <script src='lib/swagger-oauth.js' type='text/javascript'></script>
+  <script src='static/swagger-ui/lib/object-assign-pollyfill.js' type='text/javascript'></script>
+  <script src='static/swagger-ui/lib/jquery-1.8.0.min.js' type='text/javascript'></script>
+  <script src='static/swagger-ui/lib/jquery.slideto.min.js' type='text/javascript'></script>
+  <script src='static/swagger-ui/lib/jquery.wiggle.min.js' type='text/javascript'></script>
+  <script src='static/swagger-ui/lib/jquery.ba-bbq.min.js' type='text/javascript'></script>
+  <script src='static/swagger-ui/lib/handlebars-4.0.5.js' type='text/javascript'></script>
+  <script src='static/swagger-ui/lib/lodash.min.js' type='text/javascript'></script>
+  <script src='static/swagger-ui/lib/backbone-min.js' type='text/javascript'></script>
+  <script src='static/swagger-ui/swagger-ui.js' type='text/javascript'></script>
+  <script src='static/swagger-ui/lib/highlight.9.1.0.pack.js' type='text/javascript'></script>
+  <script src='static/swagger-ui/lib/highlight.9.1.0.pack_extended.js' type='text/javascript'></script>
+  <script src='static/swagger-ui/lib/jsoneditor.min.js' type='text/javascript'></script>
+  <script src='static/swagger-ui/lib/marked.js' type='text/javascript'></script>
+  <script src='static/swagger-ui/lib/swagger-oauth.js' type='text/javascript'></script>
 
   <!-- Some basic translations -->
   <!-- <script src='lang/translator.js' type='text/javascript'></script> -->
@@ -38,7 +38,7 @@
       if (url && url.length > 1) {
         url = decodeURIComponent(url[1]);
       } else {
-        url = "http://petstore.swagger.io/v2/swagger.json";
+        url = "http://localhost:8000/swagger.json";
       }
 
       hljs.configure({
